# openai-agents-sdk

./: README.md
Personal-finance-advisor-agent/: README.md  chainlit.md  chatbot.py  instructions.py  personal_finance_advisor_agent.ipynb  pyproject.toml
chainlit-chatbot/: .env  README.md  chainlit.md  chatbot.ipynb  chatbot.py  instructions.py  pyproject.toml
chainlit-chatbot/.mypy_cache/: missing_stubs
chainlit-chatbot/.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  (+287 more)
chainlit-chatbot/.mypy_cache/3.13/: __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.meta.json  (+220 more)
customer_support_agent/: README.md  chainlit.md  chatbot.py  customer_support_agent (1).ipynb  instructions.py  pyproject.toml
(+14403 files in other folders)
